force-app/main/default/objects/Audit_Question__c/Audit_Question__c.object-meta.xml
<CustomObject>
    <label>Audit Question</label>
    <nameField>
        <displayFormat>AQ-{0000}</displayFormat>
        <label>Audit Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>