force-app/main/default/objects/Audit_Question__c/fields/Default_value__c.field-meta.xml
<CustomField>
    <fullName>Default_value__c</fullName>
    <label>Default value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>