force-app/main/default/objects/Audit_Question__c/fields/Dependent_Question__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent Question</label>
    <referenceTo>Audit_Question__c</referenceTo>
    <relationshipLabel>Audit Questions</relationshipLabel>
    <relationshipName>Audit_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>