force-app/main/default/objects/Audit_Question__c/fields/Is_active__c.field-meta.xml
<CustomField>
    <fullName>Is_active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>