force-app/main/default/objects/Audit_Question__c/fields/Is_Dependent_Question__c.field-meta.xml
<CustomField>
    <fullName>Is_Dependent_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dependent question or not</description>
    <label>Is Dependent Question</label>
    <type>Checkbox</type>
</CustomField>