force-app/main/default/objects/Audit_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>