force-app/main/default/objects/Audit_Question__c/fields/Read_only__c.field-meta.xml
<CustomField>
    <fullName>Read_only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Read only  after saving the data</description>
    <inlineHelpText>Read only  after saving the data</inlineHelpText>
    <label>Read only</label>
    <type>Checkbox</type>
</CustomField>