force-app/main/default/objects/Audit_Question__c/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If populated, this question will be available for orders with the specified work type. (PVFSL-478)</description>
    <inlineHelpText>If populated, this question will be available for orders with the specified work type.</inlineHelpText>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Audit Questions</relationshipLabel>
    <relationshipName>Audit_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>