force-app/main/default/objects/Audit_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>WorkType__c</columns>
    <columns>Options__c</columns>
    <columns>Is_active__c</columns>
    <columns>Order__c</columns>
    <columns>Exp_Parent_Ques_Response__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>